--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "core-js": "^3.42.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.383.0",
