--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.42.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^12.15.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
