--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-router": "^1.120.16",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "core-js": "^3.42.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^12.15.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
@@ -46,6 +49,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.17",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
