--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "clsx": "^2.1.1",
     "core-js": "^3.42.0",
     "embla-carousel-react": "^8.1.3",
-    "framer-motion": "^12.15.0",
+    "framer-motion": "^12.16.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "lucide-react": "^0.513.0",
+    "next": "^15.3.3",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "recharts": "^2.15.3",
     "swr": "^2.3.3",
