--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,3 @@
 [build]
   command = "npm run build"
-
-[[redirects]]
-  from = "/.well-known/*"
-  to = "/.well-known/:splat"
-  status = 200
+  publish = "public"  # این خط را اضافه کنید
