--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
     "next": "^15.3.3",
+    "next-seo": "^6.8.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.52.2",
     "recharts": "^2.15.3",
     "swr": "^2.3.3",
