--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.2",
     "recharts": "^2.15.3",
     "rehype-autolink-headings": "^7.1.0",
@@ -75,6 +76,7 @@
     "@types/react": "^18",
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18",
+    "@types/react-helmet": "^6.1.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
