--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-error-boundary": "^6.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.2",
+    "react-responsive": "^10.0.1",
     "recharts": "^2.15.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
