--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "react-error-boundary": "^6.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^10.0.1",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
@@ -78,6 +80,7 @@
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
