--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "styled-components": "^6.1.19",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
